yay. persistent (saved-across-sessions) command history for swipl repl. thanks to: https://lists.iai.uni-bonn.de/pipermail/swi-prolog/2010/004823.html

--- a/prolog_textfiles/.plrc
+++ b/prolog_textfiles/.plrc
@@ -1,2 +1,20 @@
 
 ?- write('        ~~~~ hello!! this line is coming from the .plrc file!').
+
+
+:- expand_file_name("~/.pl-history", [File|_]),
+         ( exists_file(File)
+         -> rl_read_history(File)
+         ; true
+         ).
+
+rl_write_history :-
+         expand_file_name("~/.pl-history", [File|_]),
+         rl_write_history(File).
+
+:- at_halt(rl_write_history).
+
+
+
+?- [test].
+
