commenting this module-import out for now. i thought i would eventually comment it out to DEBUG things, but it turns out there is a different motivation: if i do not use the DEFAULT print-out format, then the results are not valid for pasting back into the repl!

--- a/prolog_textfiles/.plrc
+++ b/prolog_textfiles/.plrc
@@ -23,5 +23,5 @@ rl_write_history :-
 
 
 % comment out the portrayal module if we suspect that my custom printing functions are obscuring some bug
-?- use_module(modules/camping_portrayal).
+%?- use_module(modules/camping_portrayal).
 
