--- a/prolog_textfiles/.plrc
+++ b/prolog_textfiles/.plrc
@@ -1,6 +1,8 @@
 
-?- write('        ~~~~ hello!! this line is coming from the .plrc file!').
-
+?- write('        ~~~~'), nl.
+?- write('        ~~~~ hello!'), nl.
+?- write('        ~~~~ located and loaded the .plrc file!'), nl.
+?- write('        ~~~~'), nl.
 
 :- expand_file_name("~/.pl-history", [File|_]),
          ( exists_file(File)
@@ -17,10 +19,9 @@ rl_write_history :-
 % prolog_file_type is a dynamic multifile predicate defined in module user.
 user:prolog_file_type(pro,prolog).
 
+
 % mini_datatypes is ONE OPTION (there are others) for the datatypes that we want the camping module to 'see'
-?- use_module(modules/dbms/mini_datatypes).
-
-
+%?- use_module(modules/dbms/mini_datatypes).
 
 % comment out the portrayal module if we suspect that my custom printing functions are obscuring some bug.
 % another reason to comment it out: if you need output formatted in a way that you can paste it back into the repl.
