--- a/prolog_textfiles/.plrc
+++ b/prolog_textfiles/.plrc
@@ -21,7 +21,7 @@ user:prolog_file_type(pro,prolog).
 
 
 % mini_datatypes is ONE OPTION (there are others) for the datatypes that we want the camping module to 'see'
-%?- use_module(modules/dbms/mini_datatypes).
+?- use_module(modules/dbms/mini_datatypes).
 
 % comment out the portrayal module if we suspect that my custom printing functions are obscuring some bug.
 % another reason to comment it out: if you need output formatted in a way that you can paste it back into the repl.
